--- a/glasses.html
+++ b/glasses.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -97,7 +97,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/glass1.jpg" alt="">
+            <img src="glass1.jpg" alt="">
             <div class="card-body">
                 <h3>Ray-Ban Pilot Metal Gold</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -114,7 +114,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/glass2.jpg" alt="">
+            <img src="glass2.jpg" alt="">
             <div class="card-body">
                 <h3>Ray-Ban Wayfarer</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -131,7 +131,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/glass3.jpg" alt="">
+            <img src="glass3.jpg" alt="">
             <div class="card-body">
                 <h3>Ray-Ban Club Acetate </h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -148,7 +148,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/glass4.jpg" alt="">
+            <img src="glass4.jpg" alt="">
             <div class="card-body">
                 <h3>Ray-Ban Aviator Metal</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -168,7 +168,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/glass5.jpg" alt="">
+                <img src="glass5.jpg" alt="">
                 <div class="card-body">
                     <h3>
                         Ray-Ban Round Acetate</h3>
@@ -186,7 +186,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/glass6.jpg" alt="">
+                <img src="glass6.jpg" alt="">
                 <div class="card-body">
                     <h3>Ray-Ban Round Metal </h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -203,7 +203,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/glass7.jpg" alt="">
+                <img src="glass7.jpg" alt="">
                 <div class="card-body">
                     <h3>Ray-Ban Colonel Square</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -220,7 +220,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/glassa1.jpg" alt="">
+                <img src="glassa1.jpg" alt="">
                 <div class="card-body">
                     <h3>
                      Ray-Ban Acetate</h3>
@@ -240,7 +240,7 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/glass9.jpg" alt="">
+                    <img src="glass9.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             Ray-Ban Metal Gold</h3>
@@ -258,7 +258,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/glass10.jpg" alt="">
+                    <img src="glass10.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             
@@ -277,7 +277,7 @@ Ray-Ban Sunglasses</h3>
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/glass11.jpg" alt="">
+                    <img src="glass11.jpg" alt="">
                     <div class="card-body">
                         <h3>Ray-Ban Pilot Metal</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -294,7 +294,7 @@ Ray-Ban Sunglasses</h3>
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/glass12.jpg" alt="">
+                    <img src="glass12.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             Ray-Ban Sunglasses</h3>
@@ -407,7 +407,7 @@ Ray-Ban Sunglasses</h3>
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
