--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -90,7 +90,7 @@
     <button id="shopnow">Shop Now</button>
     </div>
     <div class="img">
-        <img src="image/shop4.jpeg" alt="">
+        <img src="shop4.jpeg" alt="">
     </div>
 </section>
           <!-- home content -->
@@ -100,7 +100,7 @@
     <div class="row">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card" style="background-color: #a9a9a926;">
-              <img src="image/bata1.jpg" alt="">
+              <img src="bata1.jpg" alt="">
               <div class="card-img-overlay">
                 <h5 class="card-titel"></h5>
                 <!-- <p><strong>$100.10 <strike>$200.10</strike></strong></p> -->
@@ -110,7 +110,7 @@
         </div> 
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card" style="background-color: #a9a9a926;">
-              <img src="image/juicers.jpg" alt="">
+              <img src="juicers.jpg" alt="">
               <div class="card-img-overlay">
                 <h5 class="card-titel"></h5>
                 <!-- <p><strong>$100.10 <strike>$200.10</strike></strong></p> -->
@@ -120,7 +120,7 @@
         </div> 
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card" style="background-color: #a9a9a926;">
-              <img src="image/rings.jpg" alt="">
+              <img src="rings.jpg" alt="">
               <div class="card-img-overlay">
                 <h5 class="card-titel"></h5>
                 <!-- <p><strong>$100.10 <strike>$200.10</strike></strong></p> -->
@@ -130,7 +130,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card" style="background-color: #a9a9a926;">
-              <img src="image/mobile.jpg" alt="">
+              <img src="mobile.jpg" alt="">
               <div class="card-img-overlay">
                 <h5 class="card-titel"></h5>
                 <!-- <p><strong>$100.10 <strike>$200.10</strike></strong></p> -->
@@ -161,7 +161,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shirts.jpg" alt="">
+            <img src="shirts.jpg" alt="">
             <div class="card-body">
                 <h3>Men T-shirt</h3>
                 <p>lorem ipsum dolor sit amet.</p>
@@ -178,7 +178,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/cases and cover.jpg" alt="">
+            <img src="cases and cover.jpg" alt="">
             <div class="card-body">
                 <h3>Covers</h3>
                 <p>lorem ipsum dolor sit amet.</p>
@@ -195,7 +195,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/smart.jpg" alt="">
+            <img src="smart.jpg" alt="">
             <div class="card-body">
                 <h3>Smart Watches</h3>
                 <p>lorem ipsum dolor sit amet.</p>
@@ -212,7 +212,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/hand.jpg" alt="">
+            <img src="hand.jpg" alt="">
             <div class="card-body">
                 <h3>Hand exercise</h3>
                 <p>lorem ipsum dolor sit amet.</p>
@@ -232,7 +232,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/fashion.jpg" alt="">
+                <img src="fashion.jpg" alt="">
                 <div class="card-body">
                     <h3>Begs</h3>
                     <p>lorem ipsum dolor sit amet.</p>
@@ -249,7 +249,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/b.webp" alt="">
+                <img src="b.webp" alt="">
                 <div class="card-body">
                     <h3>Kids watch</h3>
                     <p>lorem ipsum dolor sit amet.</p>
@@ -266,7 +266,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/k.webp" alt="">
+                <img src="k.webp" alt="">
                 <div class="card-body">
                     <h3>Machine Cover</h3>
                     <p>lorem ipsum dolor sit amet.</p>
@@ -283,7 +283,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/north4.jpg" alt="">
+                <img src="north4.jpg" alt="">
                 <div class="card-body">
                     <h3>Shoes</h3>
                     <p>lorem ipsum dolor sit amet.</p>
@@ -395,7 +395,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
