--- a/pants.html
+++ b/pants.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -97,7 +97,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/pant1.jpg" alt="">
+            <img src="pant1.jpg" alt="">
             <div class="card-body">
                 <h3>
                     Levi's® Xx Chino Slim </h3>
@@ -115,7 +115,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/pant2.jpg" alt="">
+            <img src="pant2.jpg" alt="">
             <div class="card-body">
                 <h3>Levi's® Men's XX</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -132,7 +132,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/pant3.jpg" alt="">
+            <img src="pant3.jpg" alt="">
             <div class="card-body">
                 <h3>Levi's® Men's XX Chino</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -149,7 +149,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/pant4.jpg" alt="">
+            <img src="pant4.jpg" alt="">
             <div class="card-body">
                 <h3>
                     Levi's® Men's Taper</h3>
@@ -170,7 +170,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/pant5.jpg" alt="">
+                <img src="pant5.jpg" alt="">
                 <div class="card-body">
                     <h3>
                         Califord Denim 0122</h3>
@@ -188,7 +188,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/pant6.jpg" alt="">
+                <img src="pant6.jpg" alt="">
                 <div class="card-body">
                     <h3>Levi's® Men's XX Chino </h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -205,7 +205,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/pant7.jpg" alt="">
+                <img src="pant7.jpg" alt="">
                 <div class="card-body">
                     <h3>Califord KA04- Black</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -222,7 +222,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/pant8.jpg" alt="">
+                <img src="pant8.jpg" alt="">
                 <div class="card-body">
                     <h3>
                         Focus Clothing - FADED</h3>
@@ -242,7 +242,7 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/pant9.jpg" alt="">
+                    <img src="pant9.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             Levi's® Men's XX Chino</h3>
@@ -260,7 +260,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/pant10.jpg" alt="">
+                    <img src="pant10.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             Focus Clothing - BLACK</h3>
@@ -278,7 +278,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/pant11.jpg" alt="">
+                    <img src="pant11.jpg" alt="">
                     <div class="card-body">
                         <h3>Focus Clothing - INDIGO</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -295,7 +295,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/pant13.jpg" alt="">
+                    <img src="pant13.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             Focus Clothing - GOLDEN</h3>
@@ -408,7 +408,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
