--- a/shoes.html
+++ b/shoes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -97,7 +97,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shoes5.avif" alt="">
+            <img src="shoes5.avif" alt="">
             <div class="card-body">
                 <h3>Red shoes</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -114,7 +114,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shoes2.avif" alt="">
+            <img src="shoes2.avif" alt="">
             <div class="card-body">
                 <h3>Browns Brand</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -131,7 +131,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shoes7.avif" alt="">
+            <img src="shoes7.avif" alt="">
             <div class="card-body">
                 <h3>Green Style</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -148,7 +148,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shoes6.avif" alt="">
+            <img src="shoes6.avif" alt="">
             <div class="card-body">
                 <h3>Sports</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -168,7 +168,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/lady1.avif" alt="">
+                <img src="lady1.avif" alt="">
                 <div class="card-body">
                     <h3>pinky</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -185,7 +185,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/lady2.avif" alt="">
+                <img src="lady2.avif" alt="">
                 <div class="card-body">
                     <h3>Self Black</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -202,7 +202,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/lady6.avif" alt="">
+                <img src="lady6.avif" alt="">
                 <div class="card-body">
                     <h3>Party Heels</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -219,7 +219,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/lady4.avif" alt="">
+                <img src="lady4.avif" alt="">
                 <div class="card-body">
                     <h3>Pink Style</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -238,7 +238,7 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shoes10.avif" alt="">
+                    <img src="shoes10.avif" alt="">
                     <div class="card-body">
                         <h3>Dark Brown</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -255,7 +255,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shoes11.avif" alt="">
+                    <img src="shoes11.avif" alt="">
                     <div class="card-body">
                         <h3>Dark Blue</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -272,7 +272,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shoes12.avif" alt="">
+                    <img src="shoes12.avif" alt="">
                     <div class="card-body">
                         <h3>Camel Body</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -289,7 +289,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shoes13.avif" alt="">
+                    <img src="shoes13.avif" alt="">
                     <div class="card-body">
                         <h3>Black Day</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -401,7 +401,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
