--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -166,7 +166,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
