--- a/tshirt.html
+++ b/tshirt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <!-- font style -->
@@ -35,7 +35,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg" id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -97,7 +97,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shirt1.jpg" alt="">
+            <img src="shirt1.jpg" alt="">
             <div class="card-body">
                 <h3>Vintage</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -114,7 +114,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shirt10.jpg" alt="">
+            <img src="shirt10.jpg" alt="">
             <div class="card-body">
                 <h3>White Shirt</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -131,7 +131,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shirt11.jpg" alt="">
+            <img src="shirt11.jpg" alt="">
             <div class="card-body">
                 <h3>Red Shirt</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -148,7 +148,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/shirt12.jpg" alt="">
+            <img src="shirt12.jpg" alt="">
             <div class="card-body">
                 <h3>Sport Shirt</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -168,7 +168,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/shirt2.jpg" alt="">
+                <img src="shirt2.jpg" alt="">
                 <div class="card-body">
                     <h3>Tiger Print</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -185,7 +185,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/shirt3.jpg" alt="">
+                <img src="shirt3.jpg" alt="">
                 <div class="card-body">
                     <h3>The Boys</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -202,7 +202,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/shirt9.jpg" alt="">
+                <img src="shirt9.jpg" alt="">
                 <div class="card-body">
                     <h3>Messi&Batmen</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -219,7 +219,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/shirt4.jpg" alt="">
+                <img src="shirt4.jpg" alt="">
                 <div class="card-body">
                     <h3>King Brand</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -238,7 +238,7 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shirt5.jpg" alt="">
+                    <img src="shirt5.jpg" alt="">
                     <div class="card-body">
                         <h3>Black Coffee</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -255,7 +255,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shirt6.jpg" alt="">
+                    <img src="shirt6.jpg" alt="">
                     <div class="card-body">
                         <h3>Three Shirts</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -272,7 +272,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shirt13.jpg" alt="">
+                    <img src="shirt13.jpg" alt="">
                     <div class="card-body">
                         <h3>Messi 10</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -289,7 +289,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/shirt8.jpg" alt="">
+                    <img src="shirt8.jpg" alt="">
                     <div class="card-body">
                         <h3>Pack of 2</h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -401,7 +401,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
