--- a/watch.html
+++ b/watch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>online shopping</title><link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image" href="/image/pngegg.png">
+    <link rel="shortcut icon" type="image" href="pngegg.png">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -36,7 +36,7 @@
     <!-- navbaar -->
     <nav class="navbar navbar-expand-lg"id="navbar">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="image/pngegg.png" alt="" width="100px"></a>
+          <a class="navbar-brand" href="#"><img src="pngegg.png" alt="" width="100px"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span><i class="fa-solid fa-bars" style="color:black;" ></i></span>
           </button>
@@ -98,7 +98,7 @@
     <div class="row" style="margin-top: 30px;">
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/watch1.jpg" alt="">
+            <img src="watch1.jpg" alt="">
             <div class="card-body">
                 <h3>
                     K800 Ultra Smart</h3>
@@ -116,7 +116,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/watch2.jpg" alt="">
+            <img src="watch2.jpg" alt="">
             <div class="card-body">
                 <h3>Zero® Core Fits</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -133,7 +133,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/watch3.jpg" alt="">
+            <img src="watch3.jpg" alt="">
             <div class="card-body">
                 <h3>T900 Ultra Smart</h3>
                 <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -150,7 +150,7 @@
     </div>
     <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
         <div class="card">
-            <img src="image/watch4.jpg" alt="">
+            <img src="watch4.jpg" alt="">
             <div class="card-body">
                 <h3>
                     Women Smart Watch</h3>
@@ -171,7 +171,7 @@
     <div class="row" style="margin-top: 30px;">
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/watch5.jpg" alt="">
+                <img src="watch5.jpg" alt="">
                 <div class="card-body">
                     <h3>
                         Mibro Watch Lite2</h3>
@@ -189,7 +189,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/watch6.jpg" alt="">
+                <img src="watch6.jpg" alt="">
                 <div class="card-body">
                     <h3>HD AMOLED Round</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -206,7 +206,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/watch7.jpg" alt="">
+                <img src="watch7.jpg" alt="">
                 <div class="card-body">
                     <h3>Rex Fit - Dany watch</h3>
                     <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -223,7 +223,7 @@
         </div>
         <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
             <div class="card">
-                <img src="image/watch8.jpg" alt="">
+                <img src="watch8.jpg" alt="">
                 <div class="card-body">
                     <h3>
                         D13 smart watch/D13</h3>
@@ -243,7 +243,7 @@
         <div class="row" style="margin-top: 30px;">
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/watch9.jpg" alt="">
+                    <img src="watch9.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             T900 Pro Ultra Smart</h3>
@@ -261,7 +261,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/watch10.jpg" alt="">
+                    <img src="watch10.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             S9 Ultra Max Smart</h3>
@@ -279,7 +279,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/watch11.jpg" alt="">
+                    <img src="watch11.jpg" alt="">
                     <div class="card-body">
                         <h3>Zero® Buzz Max </h3>
                         <!-- <p>lorem ipsum dolor sit amet.</p> -->
@@ -296,7 +296,7 @@
             </div>
             <div class="col-example col-xl-3 col-lg-4 col-md-6 col-sm-12">
                 <div class="card">
-                    <img src="image/watch12.jpg" alt="">
+                    <img src="watch12.jpg" alt="">
                     <div class="card-body">
                         <h3>
                             i8 Pro Max Smart</h3>
@@ -409,7 +409,7 @@
 </footer>
 <!-- footer -->
 
-<a href="#" class="arrow"><i><img src="image/arrow.png" alt="" width="50px"></i></a>
+<a href="#" class="arrow"><i><img src="arrow.png" alt="" width="50px"></i></a>
 
 
 
